[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/AcSeS/action_selection_system.gd" type="Script" id=1]
[ext_resource path="res://UI/AcSeS/selection_subsystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/AcSeS/action_subsystem.tscn" type="PackedScene" id=3]

[node name="ActionSelectionSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="SelectionSubsystem" parent="." instance=ExtResource( 2 )]

[node name="ActionSubsystem" parent="." instance=ExtResource( 3 )]

[node name="CancelationTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[connection signal="selection_finished" from="SelectionSubsystem" to="." method="_on_SelectionSubsystem_selection_finished"]
